# 25-1-mogakso

./: .gitignore  BUILD_AUTOMATION_SUMMARY.md  INTEGRATION_TEST_GUIDE.md  README.md  README_BUILD_AUTOMATION.md  build_all.sh  run_integration_test.sh
C_chat_lib/: BUILD_GUIDE.md  CMakeLists.txt  IMPROVEMENT_ROADMAP.md  QUICK_BUILD.md  SUMMARY.md  TEST_ANALYSIS.md
C_chat_lib/client_lib/: CMakeLists.txt
C_chat_lib/client_lib/include/: chat_client.h
C_chat_lib/client_lib/src/: chat_client.c
C_chat_lib/common/: CMakeLists.txt
C_chat_lib/common/include/: command.h  command_queue.h  protocol.h
C_chat_lib/common/src/: command.c  command_queue.c  protocol.c
C_chat_lib/scripts/: copy_library.sh
C_chat_lib/server_lib/: CMakeLists.txt
C_chat_lib/server_lib/include/: chat_server.h
C_chat_lib/server_lib/src/: chat_server.c
C_chat_lib/socket_lib/: CMakeLists.txt
C_chat_lib/socket_lib/include/: socket_utils.h
C_chat_lib/socket_lib/src/: socket_utils.c
C_chat_lib/test/: CMakeLists.txt  README.md  TEST_SUMMARY.md  client_server_integration_test.c  command_edge_test.c  command_queue_test.c  command_test.c  echo_test.c  protocol_edge_test.c  protocol_test.c  socket_utils_test.c
C_chat_lib/test/include/: test_framework.h
C_chat_lib/test/src/: test_framework.c
java_chat_server/: TEST_EXECUTION_ANALYSIS.md  TEST_SUMMARY.md  build.gradle  run_tests.sh  settings.gradle
java_chat_server/src/main/java/project/java_chat_server/: JavaChatServerApplication.java
java_chat_server/src/main/java/project/java_chat_server/c_native/: CLibrary.java
java_chat_server/src/main/java/project/java_chat_server/c_native/structure/: ClientInfo.java
java_chat_server/src/main/java/project/java_chat_server/common/: EventType.java  MessageType.java
java_chat_server/src/main/java/project/java_chat_server/config/: ChatServerConfig.java
java_chat_server/src/main/java/project/java_chat_server/controller/: ChatController.java
java_chat_server/src/main/java/project/java_chat_server/domain/: FileTransferSession.java
java_chat_server/src/main/java/project/java_chat_server/dto/: ChatMessageDto.java  UserDto.java
java_chat_server/src/main/java/project/java_chat_server/dto/chat/: ChatTextBroadcast.java  ChatTextRequest.java
java_chat_server/src/main/java/project/java_chat_server/dto/common/: ErrorResponse.java  SystemNoticeBroadcast.java
java_chat_server/src/main/java/project/java_chat_server/dto/event_data/: ConnectEventDataDto.java  DisconectEventDataDto.java  ErrorEventDataDto.java  EventDataDto.java  MessageEventDataDto.java
java_chat_server/src/main/java/project/java_chat_server/dto/file/: FileEndBroadcast.java  FileEndRequest.java  FileInfo.java  FileStartBroadcast.java  FileStartRequest.java  FileTransferState.java
java_chat_server/src/main/java/project/java_chat_server/dto/user/: UserJoinBroadcast.java  UserLeaveBroadcast.java  UserLoginRequest.java  UserLoginResponse.java
java_chat_server/src/main/java/project/java_chat_server/runner/: ChatServerRunner.java
java_chat_server/src/main/java/project/java_chat_server/service/: ChatServerService.java  ChatService.java  FileTransferService.java  UserService.java
java_chat_server/src/main/java/project/java_chat_server/service/handlers/: ChatTextHandler.java  FileChunkHandler.java  FileEndHandler.java  FileStartHandler.java  LoginRequestHandler.java  MessageHandler.java
java_chat_server/src/main/java/project/java_chat_server/wrapper_library/: ChatServer.java  ChatServerLibrary.java
java_chat_server/src/main/resources/: application.properties
java_chat_server/src/main/resources/darwin-aarch64/: libchat.dylib
java_chat_server/src/test/java/project/java_chat_server/: JavaChatServerApplicationTests.java
java_chat_server/src/test/java/project/java_chat_server/integration/: ChatServerIntegrationTest.java
java_chat_server/src/test/java/project/java_chat_server/service/: ChatServiceTest.java  FileTransferServiceTest.java  UserServiceEdgeTest.java  UserServiceTest.java
java_chat_server/src/test/java/project/java_chat_server/test_utils/: TestUtils.java
java_chat_server/src/test/java/project/java_chat_server/wrapper_library/: ChatServerEdgeTest.java  MessageTypeTest.java
py_chat_client/: .coverage  .env  .env.example  copy_library.py  coverage.xml  pytest.ini  requirements.txt  run_tests.sh
py_chat_client/src/: config.py  main.py
py_chat_client/src/app/: __init__.py  chat_manager.py
py_chat_client/src/app/events/: __init__.py  event_data.py  event_hook.py  event_manager.py  event_type.py
py_chat_client/src/app/handlers/: __init__.py  chat_text_broadcast_handler.py  error_response_handler.py  handler.py  system_notice_broadcast_handler.py  user_join_broadcast_handler.py  user_leave_broadcast_handler.py  user_left_broadcast_handler.py  user_login_response_handler.py
py_chat_client/src/client_pkg/: __init__.py  main.py
py_chat_client/src/client_pkg/native/: wrapper.py
py_chat_client/src/configs/: __init__.py  configuration.py
py_chat_client/src/core/: __init__.py  chat_client.py
py_chat_client/src/core/dto/: __init__.py  request.py  response.py
py_chat_client/src/core/enums/: __init__.py  message_type.py
py_chat_client/src/core/loader/: __init__.py  lib_loader.py
py_chat_client/src/core/wrapper/: __init__.py  wrapper.py
py_chat_client/src/core/wrapper/loader/: __init__.py  lib_loader.py
py_chat_client/src/ui/: __init__.py
py_chat_client/src/ui/command_handlers/: __init__.py  command_handler.py  nickname_command_handler.py  quit_command_handler.py  users_command_handler.py
py_chat_client/src/ui/command_type/: __init__.py  command_type.py
py_chat_client/src/ui/interfaces/: __init__.py  command_line_interface.py
py_chat_client/structure_exports/: py_chat_client_structure.json
py_chat_client/tests/: __init__.py  conftest.py
py_chat_client/tests/app/: test_chat_manager.py  test_event_manager.py  test_handlers.py
py_chat_client/tests/core/: test_chat_client.py  test_dto_request.py  test_dto_response.py  test_message_type.py
py_chat_client/tests/integration/: test_integration.py
(+15 files in other folders)
